# rota-management-software

./: .gitignore  README.md  resources.md
server/: Cargo.toml
server/src/: config.rs  database.rs  error.rs  main.rs
server/src/auth/: handlers.rs  jwt.rs  mod.rs
server/src/middleware/: request_id.rs
server/src/models/: user.rs
server/src/routes/: db_users.rs  mod.rs  users.rs
server/src/tests/: mod.rs
