[package]
name = "axum-web-api"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A web API built with Axum"

[dependencies]
axum = "0.7.2"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono", "time", "migrate"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
hyper = "1.0.1"
time = { version = "0.3", features = ["serde"] }