[package]
name = "axum-web-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.6.20"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
http = "0.2"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "8.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
bcrypt = "0.15"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
once_cell = "1.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
